Fix color on dark mode

--- a/social-media-dashboard-with-theme-switcher/sass/themes/dark_theme.scss
+++ b/social-media-dashboard-with-theme-switcher/sass/themes/dark_theme.scss
@@ -5,10 +5,6 @@ body{
     color: $netural-color-500-dark;
 }
 
-h2{
-    color: $netural-color-200-dark;
-}
-
 .section{
     &__heading{
         border-bottom-color: $netural-color-400-dark;
